Move + translate Lor to aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -194,7 +194,7 @@
 управлінні і прогнозі поведінки таких систем.
 
 При математичному та комп'ютерному моделюванні систем динамічного хаосу
-виникають специфічні для даних систем проблеми. Перш за все -- потрібно
+виникають специфічні для даних систем проблеми. Перш за все --- потрібно
 забезпечити наявність працездатного критерію адекватності моделі. Для задач
 ідентифікації наявність такого критерію є принциповим. Найбільш часто
 використовувані при моделюванні поведінки динамічних систем критерії, засновані
@@ -688,7 +688,7 @@ $ p_\mathrm{id}$. При використанні в цілях
 Введемо необхідні для подальшого викладу визначення.
 
 Визначення:
-\textbf{пошуковий агент} -- це динамічна система, яка отримує вихідні ($x(t)$),
+\textbf{пошуковий агент} --- це динамічна система, яка отримує вихідні ($x(t)$),
 і, при необхідності вхідні ($u(t)$) сигнали від однієї або декількох моделей,
 величину оцінки стану об'єкту за критерієм ідентифікації,
 може обмінююватися інформацією з іншими елементами пошукової системи,
@@ -697,9 +697,9 @@ $ p_\mathrm{id}$. При використанні в цілях
 чином, щоб забезпечити визначення заданого параметра.
 
 Визначення:
-\textbf{координатор пошуку} -- це динамічна система, яка отримує інформацію
+\textbf{координатор пошуку} --- це динамічна система, яка отримує інформацію
 від пошукових агентів і на підставі цієї інформації визначає
-$p_{\mathrm{id}}(t)$ -- шукану величину ідентифікованого параметра.
+$p_{\mathrm{id}}(t)$ --- шукану величину ідентифікованого параметра.
 Крім цього, координатор може, на підставі цієї ж інформації,
 керувати процесом адаптації всієї пошукової системи.
 
@@ -1476,7 +1476,7 @@ $ F $, аналогічно (\ref{atu:eq:p_eFq}). В позначенні так
     агентів в в пошуковій групі, наприклад: ``2'' --- пошукова пара, ``3'' --- триплет.
 
   \item
-    Четвертий символ (``z'' --- zero, ``r'' -- real \ldots),
+    Четвертий символ (``z'' --- zero, ``r'' --- real \ldots),
     описує поведінку додаткових моделей, які перебувають на кордоні:
 
   \item
@@ -1840,7 +1840,219 @@ $ p_c $ агента, характеризуються дещо більшими
 процесів ідентифікації ряду систем хаотичної динаміки,
 ак відомих, так і тих, які розглянуто вперше.
 
-У підрозділі 5.1 досліджуються процеси ідентифікації системи Лоренца.
+У якості першої ідентифікованої хаотичної системи розглянемо класичну систему
+Лоренца, динаміка якої описується системою рівнянь:
+%
+\begin{equation}
+\begin{cases}
+  \dot{x} = \sigma (y-x ) , \\
+  \dot{y} = x (r-z) - y , \\
+  \dot{z} = x y - b z .
+\end{cases}
+\label{atu:eq:lor}
+\end{equation}
+
+Найціннішим з точки зору ідентифікації є параметр $ r $, що визначає як
+енергетичний стан системи, так і вид динаміки системи. Це підтверджують і
+фізичні обгрунтування. Для визначеності задамо інші параметри наступним
+класичним чином: $ b = 2.6666667 $, $\sigma = 10 $, якщо не буде явно
+зазначено протилежне.
+
+При малих значеннях параметра $ r $ система демонструє затухаючі коливання.
+Далі, в широкому діапазоні значення параметра $r$ система проявляє хаотичну
+динаміку. Крім цього, спектр даної системи в хаотичному режимі досить широкий
+(рис.~\ref{atu:f:lor_attractor_phase_chaos28}) і не має домінуючих
+частот, що не характерно для багатьох систем динамічного хаосу.
+При подальшому зростанні параметра $ r $ динаміка системи стає
+складно-періодичної, з явно вираженим лінійчатим спектром.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/lor/lor0-p_xyz_r=028.png}
+  \hfill
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/lor/lor0_fft-p_f_r=028.png}
+\end{center}
+  \caption{Аттрактор і спектр системи Лоренца (\ref{atu:eq:lor}) в хаотичному режимі($r=28$)}
+\label{atu:f:lor_attractor_phase_chaos28}
+\end{figure}
+
+Для синтезу критерію ідентифікації параметра $ r $ системи
+(\ref{atu:eq:lor}), розглянемо набір фізичних систем, для моделювання яких застосовується
+система Лоренца. Історично першою такою системою є завдання про теплової
+конвекції рідини в плоскому шарі.
+Змінні і параметри системи Лоренца визначаються наступним чином: $ x $ задає
+швидкість обертання валів течії, $ y $, $ z $ --- відповідають розподілу
+температури по горизонталі і вертикалі. $ \sigma $ --- число Прандтля
+(відношення коефіцієнтів кінематичної в'язкості і температуропровідності).
+Параметр $ b $ визначає відносини розмірів осередку. $ R $ --- (ідентифікований
+параметр) --- наведене число Релея, що визначає енергетичні параметри
+конвективного течії.
+З трьох змінних стану найпростіше спостереження піддається змінна $ x $.
+З іншого боку, так як параметр $ r $ визначає енергетичні співвідношення в
+системі, то і критерій якості повинен являти собою квадратичну форму від $ x $,
+причому усереднену на інтервалі часу, значно більшому, ніж характерний час
+обороту рідинного вала.
+
+Виходячи з вищевикладеного, в першу чергу слід перевірити придатність критерію
+виду $ q_ {x ^ 2} $. Проте, перевіримо всі критерії даного виду, застосовні до
+даної системи. На рис.~\ref{atu:f:lor_q} наведені досліджувані залежності
+$q_{*}(r)$.
+
+\begin{figure}[ht!]
+  \centerline{\includegraphics[width=0.5\textwidth]{p5/p/cha/lor/lor_q-p_q_r.png} }
+  \caption{Розглянуті критерії для системи Лоренца}
+  \label{atu:f:lor_q}
+\end{figure}
+
+Аналіз графіків дозволяє зробити висновок, що практично всі розглянуті види
+критеріїв повинні дозволяти побудувати працездатну систему ідентифікації. При
+цьому, велика частина графіків, в тому числі і з самого початку запропонований
+$q_{x^2}$, втрачають монотонність при переході від режиму загасаючих
+коливань до хаотичного.
+Спектри сигналів $ x (t) $, $ y (t) $ і $ z (t) $ мають практично однакову
+структуру. У подальших дослідженнях обмежимося критеріями
+$q_{x^2}$ и
+$q_{y^2}$.
+Також отримано залежності $ \sigma_q(\tau_q) $ та  $ \sigma_q(a_q) $,
+що доволяє корректно установити $a_q$.
+
+Визначимо тестове завдання наступним чином:
+\[
+  p(t) \in [20, 60],
+\]
+%
+\begin{equation}
+  r_o(t) = p_o(t) = p_0 +  U_{p} \sign \sin( \omega_{p} t ),
+  \label{atu:eq:lor_po_t_sign}
+\end{equation}
+%
+%
+\begin{equation}
+  r_o(t) = p_o(t) = p_0 +  U_{p} \sin( \omega_{p} t ),
+  \label{atu:eq:lor_po_t_sin}
+\end{equation}
+%
+де:
+$p_0 = 37$, $U_p=12$, $\omega_p=0.09$.
+
+Рассморено застосування для ідентфікаціі методу з одним агентом, керуючим двома
+моделями, і використовує два УГПК і інтегратором для визначення динаміки агента
+(``Fl2nlosdlcA.$q_{x^2}$''). Встановлено, що він
+працездатний, аде
+не забезпечує потрібної швидкодії.
+Для порівняння були обрані три групи мультімодельних метода ідентифікації:
+ql3ruonAAF.$q_{x^2}$,
+ql3ruonAAF.$q_{y^2}$ и
+Fq3zlovnAAF.$q_{x^2}$.
+На рис.~\ref{atu:f:lor_id_ql3ruonAAF.q_x2_sign} представлені результати
+ідентифікації методом ql3ruonAAF. $q_{x^2} $, при цьому на лівому графіку
+зображено динаміку переміщення кожної з рухливих моделей, а на правому -- 4
+способи визначення $ p_\mathrm{id} (t) $.
+
+\begin{figure}[ht!]
+  \centerline{
+    \includegraphics[width=0.45\textwidth]{p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qy2-p_t_pi_sign.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qy2-p_t_pz_sign.png}
+  }
+  \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца методом ql3ruonAAF.$q_{x^2}$ при умовах~(\ref{atu:eq:lor_po_t_sign})}
+  \label{atu:f:lor_id_ql3ruonAAF.q_x2_sign}
+\end{figure}
+
+Найгірші результати демонструє $ p_{ge} $. Також, абсолютно очікувано, кращі
+результати продемонстрував підхід $ p_{be}$. Також, при штучних обмеження
+$v_f = 0 $ і $ q_\gamma = 0.1 $ були отримані величини, що характеризують
+якість ідентифікації для нерухомих агентів:
+$ \overline{e}_{bc} = 9.85 $ і
+$ \overline{e}_{be} = 7.09 $, що свідчить про виправданість як переміщення
+агентів, так і використанні величин $ p_e $ для визначення $ p_\mathrm{id} $.
+Аналогічні результати, але з меншою помилкою ідентифікації були отримані за
+умови плавної зміни значення параметра об'єкта~(\ref{atu:eq:lor_po_t_sin}).
+
+Процес ідентифікації методом Fq3zlovnAAF за умовами~(\ref{atu:eq:lor_po_t_sign}) представлено
+на рис.~\ref{atu:f:lor_id_Fq3zlovnAAF.q_x2_sign}. В першу чергу слід
+відзначити велику рухливість агентів, аж до штучного обмеження рухливості
+здебільшого моделей. З одного боку, це дещо зменшує швидкодію системи при
+різких змінах параметра, з іншого --- забезпечує достатню зміщення ``далеких''
+агентів, що, в якійсь мірі, компенсує можливі помилки в налаштуванні системи.
+
+\begin{figure}[ht!]
+  \centerline{
+    \includegraphics[width=0.45\textwidth]{p5/p/cha/lor/Fq3zlovnAAF/lor_Fq3zlovnAAF_qx2-pl_n_sign.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{p5/p/cha/lor/Fq3zlovnAAF/lor_Fq3zlovnAAF_qx2-p_p_sign.png}
+  }
+  \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца методом Fq3zlovnAAF.$q_{x^2}$ при умовах~(\ref{atu:eq:lor_po_t_sign})}
+  \label{atu:f:lor_id_Fq3zlovnAAF.q_x2_sign}
+\end{figure}
+
+
+Розглянуто вплив параметрів системи ідентифікації на процес ідентифікації. Для
+цього будемо змінювався кожен з істотних параметрів і були побудовані
+залежності $\overline {e}_{r*} $ для кожного з розглянутих методів.
+Як приклад,
+на рис.~\ref{atu:f:lor_a_q_ql3ruonAAF.q_x2} представлені залежності
+усереднених помилок ідентифікації системи Лоренца від $ a_q $ при використанні
+методу ql3ruonAAF.
+Форма кривих з явним екстремумів обумовлена впливами протиборчих
+факторів. При великих значеннях $ a_q $, занадто сильно вплив хаотичної
+динаміки, що б можна було б проводити успішну ідентифікацію. З іншого боку, при
+занадто малих значеннях $ a_q $, час оцінювання критерію настільки велике, що
+система ідентифікації не встигає відслідковувати зміну параметра.
+
+\begin{figure}[ht!]
+  \centerline{
+    \includegraphics[width=0.45\textwidth]{p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_a_q_e_sign.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_a_q_e_sin.png}
+  }
+  \caption{Залежності $\overline{e}_{r*}(a_q)$ при ідентифікації системи Лоренца методом ql3ruonAAF.$q_{x^2}$
+   при~(\ref{atu:eq:lor_po_t_sign}) и (\ref{atu:eq:lor_po_t_sin})}
+  \label{atu:f:lor_a_q_ql3ruonAAF.q_x2}
+\end{figure}
+
+Також розглянуто вплив параметрів $q_\gamma$, $v_f$, $k_e$, $k_n$, $k_c$.
+Визначено, що адаптивні властивості мульіагентних ансамблевих пошукових методів дозволяють
+змінювати параметри системи ідентифікації в широких межах,
+що спрощує настроювання ті забезпечую робастність метода.
+Вид функыъ якості має вплив на результати, але не суттєвий.
+Також встановлено, що як занадно мала, так і занадто велика кількість агентів
+приводить до росту помилки ідентифікації.
+
+Для оцінювання можливості одночасної ідентифікації декількох параметрів
+розглянемо графіки залежностей критеріїв, але за умови зміни двох параметрів
+попарно: ($ r $, $\sigma $) і ($ r $, $ b $).
+На рис.~\ref{atu:f:lor_qz2_r_b}
+приведена залежність
+$q_{z^2}(r,b)$.
+Близька до квадратичної залежність від параметра $ r $ не представляє особливих
+проблем. Корисним є той факт, що для даного критерію залежність від параметра $b $
+досить мала. Отже, при двупараметріческой ідентифікації даний критерій має
+сенс використовувати для (оціночної) ідентифікації параметра $ r $, і
+сукупність даного критерію разом з, наприклад, $ q_{x^2} $ дозволить
+ідентифікувати обидва параметри без надмірної кількості моделей.
+
+\begin{figure}[ht!]
+  \centerline{  \includegraphics[width=0.50\textwidth]{p5/p/cha/lor/q2d/lor_qz2_r_b.png}  }
+  \caption{Залежність $q_{z^2}(r,b)$ для системи Лоренца}
+  \label{atu:f:lor_qz2_r_b}
+\end{figure}
+
+
+Таким чином,
+для синтезу працездатної системи ідентифікації параметра ``$r$'' системи
+Лоренца можуть застосовуватися практично все розглянуті критерії. При цьому,
+більший діапазон застосовності --- у критерію  $q_{x^2}$.
+Система мультиагентной ідентифікації може бути реалізована як з агентами, які
+здійснюють пошук як з використанням критерію, так і з використанням функції
+якості. При цьому, помилка ідентифікації визначається в основному не конкретним
+методом, а динамічними властивостями самого ідентифікованого об'єкта і
+використовуваним часом усереднення критерію.
+
+
+
+
+
 
 У підрозділі 5.2 досліджуються процеси ідентифікації системи Sprott A.
 
@@ -1995,7 +2207,7 @@ information estimations, mathematical model.
 
 Формат $60 \times 84/16$  Папір друкарський. Ум. др.арк.~2
 
-Друк різограф. Замовлення \No 02/17. Наклад - 100 прим.
+Друк різограф. Замовлення \No 02/17. Наклад --- 100 прим.
 
 % ДНВП <<Системні технології>>
 
