--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -111,22 +111,22 @@ $b = 2.6666667$, $\sigma = 10$, если не будет явно указано
 \end{equation}
 %
 где
-$\vec{v} $   -- поле скоростей,
-$T$ -- поле температуры,
-$T_0$ и $T_0+\Delta T$   -- температуры на верхней и нижней границе соответственно,
-$\rho$ и $p$ -- поля плотности и давления,
-$g$ -- ускорение свободного падения,
-$\nu$, $\chi$, $\gamma$  -- коэффициенты кинематической вязкости, температуропроводности и
+$\vec{v} $   --- поле скоростей,
+$T$ --- поле температуры,
+$T_0$ и $T_0+\Delta T$   --- температуры на верхней и нижней границе соответственно,
+$\rho$ и $p$ --- поля плотности и давления,
+$g$ --- ускорение свободного падения,
+$\nu$, $\chi$, $\gamma$  --- коэффициенты кинематической вязкости, температуропроводности и
 теплового расширения соответственно.
 
 При приближении системы (\ref{atu:eq:lor_gidro}) к виду (\ref{atu:eq:lor}),
 переменные и параметры системы
 Лоренца определяются следующим образом: $x$ задаёт скорость вращения валов
-течения, $y$, $z$ -- соответствуют распределению температуры по горизонтали и
+течения, $y$, $z$ --- соответствуют распределению температуры по горизонтали и
 вертикали.
-$\sigma$   -- число Прандтля (отношение коэффициентов кинематической вязкости и
+$\sigma$   --- число Прандтля (отношение коэффициентов кинематической вязкости и
 температуропроводности). Параметр $b$ определяет отношения размеров ячейки.
-$r$ -- (идентифицируемый параметр) -- приведённое число Релея, определяющее
+$r$ -- (идентифицируемый параметр) --- приведённое число Релея, определяющее
 энергетические параметры конвекционного течения.
 
 Из трёх переменных состояния проще всего наблюдению поддаётся переменная
