--- a/p5/spr_a_testsys.tex
+++ b/p5/spr_a_testsys.tex
@@ -209,7 +209,7 @@ $p_{ge}$, $p_{le}$, $p_{ee}$ и $p_{xe}$.
 Зависимость $p_{xe}(t)$, в данном случае демонстрирует
 высокий уровень колебаний, и следовательно,
 худшие результаты поиска. При этом,
-остальные подходы к определению $p_{id}$
+остальные подходы к определению $p_\mathrm{id}$
 демонстрируют схожие между собой результаты.
 $\overline{e}_{bm}=1.41$
 $\overline{e}_{ba}=1.49$.
