Add dry_friction to aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -2,6 +2,7 @@
 %\documentclass[a4paper,12pt,russian]{atuaref}
 \RequirePackage[utf8]{inputenc}
 \usepackage[verbose,tmargin=25mm,bmargin=25mm,lmargin=30mm,rmargin=20mm,headsep=10pt]{geometry}
+% example: W=125mm, H=180mm
 \newlength\TW
 \setlength{\TW}{0.01\textwidth} % after geometry!
 \usepackage{amssymb}
@@ -136,10 +137,10 @@
 {~}
 &
 доктор технічних наук, професор,\newline
-\textbf{Жолткевич Григорій Миколайович},
-  декан механіко-математичного факультету,
-  завідувач кафедри теоретичної та прикладної інформатики
-  Харківського національного університету ім.~В.Н.~Каразіна;
+% \textbf{Жолткевич Григорій Миколайович},
+%   декан механіко-математичного факультету,
+%   завідувач кафедри теоретичної та прикладної інформатики
+%   Харківського національного університету ім.~В.Н.~Каразіна;
 \end{tabular}
 
 \vspace{5ex plus 4ex}
@@ -2161,25 +2162,228 @@ FAlv5.3r.$q_{x^2}$.
 
 Також розглянуто вплив параметрів $a_q$, $q_\gamma$, $v_f$, $k_e$, $k_n$, $k_c$
 на якість ідентифікації. Як і для системи Лоренца, методи
-продемонстрували достатью робастність, але для цієї системи
+продемонстрували достатьню робастність, але для цієї системи
 вплив динаміки агентів значно меньший.
 
+Однією з відомих хаотичних систем, легко реалізованих як модельно
+(\ref{atu:eq:chua}), так і схемотехнически, є нелінійна система Чуа:
+%
+\begin{equation}
+\begin{cases}
+  C_1 \dot{V_1}  = \frac{1}{R} ( V_2 - V_1 ) - g(V_1), \\
+  C_2 \dot{V_2}  = \frac{1}{R} ( V_1 - V_2 ) + I_L, \\
+  \dot{I_L}      = - \frac{1}{L} V_2 .
+\end{cases}
+\label{atu:eq:chua}
+\end{equation}
+
+Єдиним нелінійним елементом в цій системі є ``діод Чуа'' з характеристикою
+$g(V)$~(\ref{atu:eq:diodchua}).
+%
+%
+\begin{equation}
+g(V) =
+\begin{cases}
+  m_1 V = ( m_0 + m_2 ) V , & |V| <   U_0, \\
+  m_0 V ,                   & |V| \ge U_0.
+\end{cases}
+\label{atu:eq:diodchua}
+\end{equation}
+
+Введемо параметр \(m_2 = m_1 - m_0 \), який визначає в цілому нелінійність
+системи. У даній роботі як ідентифікований параметра розглядається саме
+параметр \(m_2 \).
+Класично параметри системи Чуа задаються наступним чином:
+$C_1 = 1/9$, $C_2 = 1$, $L= 1/7$, $R = 1/0.7$, $m_0=-0.5$, $ m_2 \in [ -0.15; -0.7 ] $.
+
+Введемо позначення:
+\[
+  a_{11} = \frac{1}{R C_1}; \;
+  a_{13} = \frac{1}{C_1}; \;
+  a_{21} = \frac{1}{R C_2}; \;
+  a_{23} = \frac{1}{C_2}; \;
+  a_{31} = -\frac{1}{L}; \;
+  a_g = - \frac{m_0}{C_1}; \;
+  \mu = - \frac{m_2}{C_1}.
+\]
+%
+%\noindent
+Тоді
+%
+\begin{equation}
+\begin{cases}
+  \dot{V}_1  = -a_{11} V_1 + a_{11}  V_2  + g_1(V_1) , \\
+  \dot{V}_2  = +a_{21} V_1 - a_{21}  V_2  + a_{23} I_L    , \\
+  \dot{I}_L  =  a_{31} V_2.
+\end{cases}
+\label{atu:eq:chua2}
+\end{equation}
+%
+%
+\begin{equation}
+g_1(V) =
+\begin{cases}
+  ( a_g + \mu ) V , & |V| <   U_0, \\
+  a_g V           , & |V| \ge U_0.
+\end{cases}
+\label{atu:eq:diodchua2}
+\end{equation}
+
+\noindent
+$ a_{11} = 6.5 $, $a_{21} = 0.7$, $ a_{23} = -7 $, $ a_g = 4.5 $,
+$ \mu \in [ 1.29 ; 5.6 ] $.
+Відповідно, в цих позначеннях ідентифікований параметр є~$\mu$.
+Він задає динаміку системи (рис.~\ref{atu:eq:chua2}).
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/chua/chua_1-p_xyz_mu=2x74.png}
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/chua/chua_1-p_xyz_mu=4x50.png}
+}
+\caption{Атрактор системи Чуа (\ref{atu:eq:chua2}) при різних значениях $\mu$}
+\label{atu:f:chua_phase}
+\end{figure}
+
+Для визначення виду критерію розглянемо залежності $ q_{*}(\mu)$ отримані
+шляхом моделювання для системи Чуа (рис.~\ref{atu:f:chua_q}):
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/chua/chua_q-p_mu2.png}
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/chua/chua_q-p_mu1.png}
+}
+  \caption{Залежності $q_{*}(\mu) $ для системи Чуа (\ref{atu:eq:chua2})}
+\label{atu:f:chua_q}
+\end{figure}
+
+З графіків очевидно, що величина $ q_{V_1} (\mu) $
+є найкращим кандидатом в критерії, з огляду на близьку до лінійної залежності в робочому діапазоні.
+
+Для ідентифікації використовувався метод ``Fq3rlovngcF''. Для
+дослідження динамічних властивостей системи ідентифікації параметр $ \mu_o $
+для об'єкта задавався двома способами:
+%
+\begin{equation}
+ \mu_o(t) = p_0 + U_p \sign \sin( \omega_p t )
+  \label{atu:eq:chua_mu_sign}
+\end{equation}
+%
+\begin{equation}
+ \mu_o(t) = p_0 + U_p \sin( \omega_p t ).
+  \label{atu:eq:chua_mu_sin}
+\end{equation}
+
+Динаміка процесів ідентифікації для системи Чуа представлена на рис.~\ref{atu:f:chua_id}.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/chua/chua_m5p-pl_n_sign.png}
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/chua/chua_m5p-pl_n_sin.png}
+}
+\caption{Процес ідентифікації параметра $\mu$ системы (\ref{atu:eq:chua2})
+  при умовах (\ref{atu:eq:chua_mu_sign}) та (\ref{atu:eq:chua_mu_sin})
+}
+\label{atu:f:chua_id}
+\end{figure}
+
+Також розглянуто вплив параметрів $a_q$, $q_\gamma$, $v_f$, $k_e$, $k_n$, $k_c$
+на якість ідентифікації. Методи
+продемонстрували працездатність та робастність.
 
 
-У підрозділі 5.3 досліджуються процеси ідентифікації системи Дуффінга.
+Існують динамічні системи, що не володіють хаотичним поведінкою, які, тим не
+менш, проявляють подібні властивості з точки зору ідентифікації. А саме,
+безпосереднє порівняння виходів системи і моделі не дозволяє зробити ніяких
+висновків про співвідношення між параметрами моделі і об'єкта. Одним із
+прикладів таких систем є динамічна система (\ref{atu:eq:dryfric_sys}), що
+моделює поведінку тіла заданої маси по дією зовнішньої сили, що змушує і сили
+сухого тертя
+\cite{atu_asau11}:
+%
+\begin{equation}
+  m \ddot{x} + f_{df}( x, \dot{x}, \ldots)  = u(t).
+\label{atu:eq:dryfric_sys}
+\end{equation}
+%
+%\noindent
+де
+$m$ -- маса тела,
+$u(t)$ -- сила, що приводить до руху,
+$ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 
-У підрозділі 5.4 досліджуються процеси ідентифікації системи Чуа.
+Важливою особливістю при моделюванні сили сухого тертя є той факт, що це силу
+неможливо коректно висловити аналітично. Основним параметром, в найпростішому
+випадку визначальним силу сухого тертя, є $f_{dm} $ --- максимальна значення її
+модуля. Визначення цієї величини і будемо вважати метою завдання ідентифікації
+системи з сухим тертям.
 
-У підрозділі 5.5 досліджуються процеси ідентифікації системи Ван-дер-Поля.
+На рис.~\ref{atu:f:fric_outs}
+представлено порівняльний приклад динаміки трьох моделей,
+при однаковому вхідному сигналі і різних значеннях $ f_ {dm} $.
 
-У підрозділі 5.6 досліджуються процеси ідентифікації системи Колпітца у традиційному вигляді.
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.4\textwidth]{p5/p/cha/fric/fric_outs.png}
+  }
+  \caption{Динаміка трьох моделей вида (\ref{atu:eq:dryfric_sys})}
+  \label{atu:f:fric_outs}
+\end{figure}
 
-У підрозділі 5.7 досліджуються процеси ідентифікації системи вібраційної системи
+Для забезпечення можливості застосування методів ідентифікації, необхідно
+існування критерію $ q (x (t)) $, що задовольняє наступним вимогам: чутливість
+до динаміки моделі і об'єкта; властивість астатизма, достатня стійкість до
+шумів вимірювання; фізична реалізація.
+
+У даній роботі зробимо припущення, що рівень шумів дозволяє створити фільтр, що
+дозволяє відсівати шуми за (як максимум) характерний час реакції системи. Після
+фільтра діє реальне дифференцирующее ланка. Відповідний вид критерію позначимо як
+$ q_{dx} $ (рис.~\ref{atu:f:fric_q}).
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.40\textwidth]{p5/p/cha/fric/fric_p-p_f_dm_q.png}
+}
+  \caption{Залежність $q_{dx}(f_{dm})$ для системи (\ref{atu:eq:dryfric_sys}) }
+\label{atu:f:fric_q}
+\end{figure}
+
+
+Динаміка процесів ідентифікації для системи (\ref{atu:eq:dryfric_sys})
+представлена на рис.~\ref{atu:f:fric_id}. Слід зазначити
+сильний вплив вхідного сигналу, В силу того, що коли системи нерухомі на одному
+з ``плато'', то немає можливості розрізнити їх параметри, який б критерій при
+цьому не використовувався.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/fric/fric_m5p-pl_n_sign.png}
+  \includegraphics[width=0.45\textwidth]{p5/p/cha/fric/fric_m5p-pl_n_sin.png}
+}
+\caption{
+  Процес ідентифікації параметра $ f_{dm} $ системи (\ref{atu:eq:dryfric_sys}) при різних видах нестаціонарності цього параметра
+}
+\label{atu:f:fric_id}
+\end{figure}
+
+Для даної системи енергетичні критерії, аналогічні застосованим в попередніх
+випадках, виявилися незастосовні. Критерій, хоч і заснований на вимірюванні
+похідною (після фільтрації), виявився працездатним. В першу чергу це пов'язано
+з тим, що в основі були покладені фізичні принципи.
+
+
+
+
+
+У підрозділі 4.3 досліджуються процеси ідентифікації системи Дуффінга.
+
+У підрозділі 4.5 досліджуються процеси ідентифікації системи Ван-дер-Поля.
+
+У підрозділі 4.6 досліджуються процеси ідентифікації системи Колпітца у традиційному вигляді.
+
+У підрозділі 4.7 досліджуються процеси ідентифікації системи вібраційної системи
 із зоною нечутливості у силі, що повертає.
 
-У підрозділі 5.7 досліджуються процеси ідентифікації системи з сухим тертям.
-
-У підрозділі 5.8 досліджуються процеси ідентифікації системи  вібраційної системи
+У підрозділі 4.8 досліджуються процеси ідентифікації системи  вібраційної системи
 із гістерезисом у силі, що повертає, у хаотичному режимі.
 
 \textbf{У п'ятому розділі}
@@ -2193,7 +2397,7 @@ BJT транзистора, та різних режимів роботи.
 Створено мікроконтролерну систему, яка
 дозволила отримати дані з реального
 генератора, та за допомогою програмного комплексу,
-який описано у розділі 4, перевірити адекватність як
+який описано у розділі 3, перевірити адекватність як
 нової моделі генератора, що було використано,
 так і працездатність створеної для неї системи ідентифікації.
 
