Colpitts to aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -2366,16 +2366,66 @@ $ q_{dx} $ (рис.~\ref{atu:f:fric_q}).
 розглянуте практичне застосування
 нових методів ідентифікації для генератора Колпітца
 з використанням реального фізичного об'єкту.
+Параметром, что підлягає ідентифікації, було обрано $R_c$.
+На рис.~\ref{atu:f:colp_schem_real} представлена електрична схема реалізації
+генератора Колпітца, використовувана в даній роботі.
+
+\begin{figure}[htb!]
+\centerline{\includegraphics[width=0.45\textwidth]{p6/p/colp_schem_real.png} }
+\caption{Електрична схема реального генератора Колпітца, використовуваного в даній роботі}
+\label{atu:f:colp_schem_real}
+\end{figure}
+
 Впроваджену нову математичну модель,
 яка враховує більше нелінійних властивостей
 BJT транзистора, та різних режимів роботи.
 
-Створено мікроконтролерну систему, яка
-дозволила отримати дані з реального
+
+Створено систему для отримання даних з використанням мікроконтролеру STM32F746, пристроїв сполучення.
+Вона дозволила отримати дані з реального
 генератора, та за допомогою програмного комплексу,
 який описано у розділі 3, перевірити адекватність як
 нової моделі генератора, що було використано,
 так і працездатність створеної для неї системи ідентифікації.
+
+Роглянуто групу можливих критеріїв (рис.~\ref{atu:f:colp_q_cml}),
+обрано критерій $q_{xz}$
+та зроблено порівняльний аналіз цого критерію
+для моделі та об'єкту (рис.~\ref{atu:f:colp_bjt_q-p_Rc_q}).
+
+\begin{figure}[htb!]
+  \includegraphics[width=0.45\textwidth]{p6/p/colp_read_q-p_Rc_q.png}
+  \hfill
+  \includegraphics[width=0.45\textwidth]{p6/p/colp_q_cml.png}
+\\
+\parbox[t]{0.45\textwidth}{
+  \caption{Залежності значень критеріїв ідентифікації для моделі системи Колпітца}
+  \label{atu:f:colp_bjt_q-p_Rc_q}
+}
+\hfill
+\parbox[t]{0.45\textwidth}{
+  \caption{Порівняння залежностей значень критерію ідентифікації $q_{xz}$ реального генератора Колпітца з моделлю}
+  \label{atu:f:colp_q_cml}
+}
+\end{figure}
+
+На підставі обраного критерію та методу ql3rlWvnAAW створено систему ідентифікації,
+проведено 4 реальних експеріменті зі змінним переметром $R_c$,
+та проведено ідентифікацію~(рис.~\ref{atu:f:colp_r_id_1}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.45\textwidth]{p6/p/colp_real_id_qi_fv5-p_p_01.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{p6/p/colp_real_id_qi_fv5-p_pp_01.png}
+  }
+  \caption{Процес ідентифікації параметра $ R_c $ реального генератора Колпітца для першого експеріменту}
+  \label{atu:f:colp_r_id_1}
+\end{figure}
+
+Результати ідентифікації продемонстрували, що метод ql3rlWvnAAW
+при обробці реальних даних забезпечую как відповідність отчиманних значень параметра $R_c$,
+так і непогану швидкодію.
 
 
 
@@ -2416,8 +2466,8 @@ BJT транзистора, та різних режимів роботи.
   хаотичної динаміки, так і систем мультиагентної ідентифікації;
 
   \item
-  проведено комп'ютерне моделювання процесів ідентифікації систем
-  хаотичної динаміки, підтверджено їх працездатність.
+  проведено як комп'ютерне моделювання процесів ідентифікації систем
+    хаотичної динаміки, так і апробація на реальних об'єктах, підтверджено їх працездатність.
 
 
 \end{itemize}
