--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -63,20 +63,20 @@
 \begin{figure}[htb!]
 \centerline{\includegraphics[width=0.7\textwidth]{p/colp_bjt_q-p_Rc_q.png} }
 \caption{Зависимости значений критериев идентификации для модели системы Колпитца}
-\label{atu:colp_bjt_q-p_Rc_q}
+\label{atu:f:colp_bjt_q-p_Rc_q}
 \end{figure}
 
 
 \begin{figure}[htb!]
 \centerline{\includegraphics[width=0.7\textwidth]{p/colp_read_q-p_Rc_q.png} }
   \caption{Зависимости значений критериев идентификации $q_{x^2}$, $q_{z^2}$ и $q_{xz}$ для реального генератора Колпитца}
-\label{atu:colp_read_q-p_Rc_q-p_Rc_q}
+\label{atu:f:colp_read_q-p_Rc_q-p_Rc_q}
 \end{figure}
 
 \begin{figure}[htb!]
 \centerline{\includegraphics[width=0.7\textwidth]{p/colp_q_cml.png} }
 \caption{Сравнение зависимостей значений критерия идентификации $q_{xz}$ реального генератора Колпитца с моделью}
-\label{atu:colp_q_cml}
+\label{atu:f:colp_q_cml}
 \end{figure}
 
 Предлагаем новые.
